<resources>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="OFFLINE_MODE">Modo Offline ativado</string>
    <string name="ERROR_INVALID_FIELDS">Por favor preencha os campos corretamente</string>

    <string name="app_name">MOBFLIX</string>
    <string name="front_end_video_section">Front End</string>
    <string name="programming_video_section">Programação</string>
    <string name="mobile_video_section">Mobile</string>
    <string name="watch_now">Assista agora</string>
    <string name="video_registration">Cadastre um vídeo</string>
    <string name="video_edit">Edite o vídeo</string>
    <string name="url_registration">Url: </string>
    <string name="url_text_hint">Ex: N3h5agha.com</string>
    <string name="category_registration">Categoria: </string>
    <string name="category_text_hint">Ex: Mobile, Front-end…</string>
    <string name="preview">Preview</string>
    <string name="registration">Cadastrar</string>
    <string name="edit">Alterar</string>
    <string name="remove">Remover</string>

    <string name="your_category">Sua Categoria Aqui</string>


    // Test Tags
    // HomeScreen
    <string name="app_name_full_column">app name full column</string>
    <string name="highlight_video_box">highlight video box</string>
    <string name="video_category">video category</string>
    <string name="video_category_clickable">video category clickable</string>
    <string name="video_section_row">video section row</string>
    <string name="video_list">video list</string>
    <string name="video_row">video row</string>
    <string name="video_card">video card</string>
    <string name="floating_action_button_tag">floating action button tag</string>

    //RegistrationScreen
    <string name="registration_field_text">registration field text</string>
    <string name="registration_field_edit_text">registration field edit text</string>
    <string name="video_card_preview">video card preview</string>
    <string name="registration_button">registration button</string>
    <string name="snack_bar">snack bar</string>

    //EditVideoScreen
    <string name="video_preview_edit_screen">video preview edit screen</string>

</resources>